--- a/.github/workflows/ARMv8.yml
+++ b/.github/workflows/ARMv8.yml
@@ -200,7 +200,7 @@ jobs:
           OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
           PACKAGE_SOC: s905d_s905x3_s922x_vplus_beikeyun_l1pro_s912
           KERNEL_AUTO_LATEST:  true
-          KERNEL_VERSION_NAME: 5.4.168_5.10.88_5.15.11
+          KERNEL_VERSION_NAME: 5.4.168_5.10.88_5.15.11_5.16.2
           WHOAMI: Yuan
           artifacts: ${{ env.FIRMWARE }}/*
           
