--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -56,7 +56,9 @@ jobs:
       with:
         retain_days: 1
         keep_minimum_runs: 1
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
